Update CMake stuff

--- a/src/gfx/CMakeLists.txt
+++ b/src/gfx/CMakeLists.txt
@@ -1,13 +1,13 @@
-add_library(Gfx
+add_library(VxLibGfx
     gfx.h
     camera.h    camera.c
 )
 
-target_include_directories(Gfx PUBLIC ..)
+target_include_directories(VxLibGfx PUBLIC ..)
 
-target_link_libraries(Gfx PRIVATE VxUtils)
-target_link_libraries(Gfx PRIVATE Sokol)
-target_link_libraries(Gfx PRIVATE glfw)
-target_link_libraries(Gfx PRIVATE Nuklear)
-target_link_libraries(Gfx PRIVATE Glad)
-target_link_libraries(Gfx PRIVATE HandmadeMath)
+target_link_libraries(VxLibGfx PRIVATE VxUtils)
+target_link_libraries(VxLibGfx PRIVATE Sokol)
+target_link_libraries(VxLibGfx PRIVATE glfw)
+target_link_libraries(VxLibGfx PRIVATE Nuklear)
+target_link_libraries(VxLibGfx PRIVATE Glad)
+target_link_libraries(VxLibGfx PRIVATE HandmadeMath)
