--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,11 @@ add_subdirectory(gfx)
 add_subdirectory(logic)
 
 add_library(VxLib INTERFACE)
-target_link_libraries(VxLib INTERFACE Os)
-target_link_libraries(VxLib INTERFACE Logic)
-target_link_libraries(VxLib INTERFACE Gfx)
+target_link_libraries(VxLib INTERFACE VxUtils)
+target_link_libraries(VxLib INTERFACE Sokol)
+target_link_libraries(VxLib INTERFACE glfw)
+target_link_libraries(VxLib INTERFACE Nuklear)
+target_link_libraries(VxLib INTERFACE Glad)
+target_link_libraries(VxLib INTERFACE VxLibOs)
+target_link_libraries(VxLib INTERFACE VxLibLogic)
+target_link_libraries(VxLib INTERFACE VxLibGfx)
