--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ target_link_libraries(VxLib INTERFACE VxUtils)
 target_link_libraries(VxLib INTERFACE Sokol)
 target_link_libraries(VxLib INTERFACE glfw)
 target_link_libraries(VxLib INTERFACE Nuklear)
+target_link_libraries(VxLib INTERFACE HandmadeMath)
 target_link_libraries(VxLib INTERFACE Glad)
 target_link_libraries(VxLib INTERFACE VxLibOs)
 target_link_libraries(VxLib INTERFACE VxLibLogic)
