Make library potentially indipendent of Sokol, Glad and Nuklear

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+add_subdirectory(common)
 add_subdirectory(os)
 add_subdirectory(gfx)
 add_subdirectory(logic)
@@ -9,6 +10,7 @@ target_link_libraries(VxLib INTERFACE glfw)
 target_link_libraries(VxLib INTERFACE Nuklear)
 target_link_libraries(VxLib INTERFACE HandmadeMath)
 target_link_libraries(VxLib INTERFACE Glad)
+target_link_libraries(VxLib INTERFACE VxLibCommon)
 target_link_libraries(VxLib INTERFACE VxLibOs)
 target_link_libraries(VxLib INTERFACE VxLibLogic)
 target_link_libraries(VxLib INTERFACE VxLibGfx)
