--- a/src/os/CMakeLists.txt
+++ b/src/os/CMakeLists.txt
@@ -15,7 +15,21 @@ target_include_directories(VxLibOs PUBLIC ..)
 
 target_link_libraries(VxLibOs PRIVATE VxLibCommon)
 target_link_libraries(VxLibOs PRIVATE VxUtils)
-target_link_libraries(VxLibOs PRIVATE Sokol)
 target_link_libraries(VxLibOs PRIVATE glfw)
-target_link_libraries(VxLibOs PRIVATE Nuklear)
-target_link_libraries(VxLibOs PRIVATE Glad)
+
+if (VX_LIB_ENABLE_GLAD)
+    message("glad")
+    target_link_libraries(VxLibOs PRIVATE Glad)
+endif()
+if (VX_LIB_ENABLE_SOKOL)
+    message("sokol")
+    target_link_libraries(VxLibOs PRIVATE Sokol)
+endif()
+if (VX_LIB_ENABLE_NUKLEAR)
+    message("nuklear")
+    target_link_libraries(VxLibOs PRIVATE Nuklear)
+endif()
+if (VX_LIB_ENABLE_WGPU)
+    message("wgpu")
+    target_link_libraries(VxLibOs PRIVATE Wgpu)
+endif()
